[gd_scene load_steps=4 format=3 uid="uid://enemy_scene"]

[ext_resource type="Script" path="res://Enemy.gd" id="1_enemy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_enemy"]
radius = 16.0
height = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sight"]
size = Vector2(200, 100)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_enemy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -20)
shape = SubResource("CapsuleShape2D_enemy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -20)

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -50.0
offset_right = 20.0
offset_bottom = -40.0
max_value = 50.0
value = 50.0

[node name="SightArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightArea"]
position = Vector2(50, -20)
shape = SubResource("RectangleShape2D_sight")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-16, -20)
target_position = Vector2(-30, 0)
enabled = true

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(16, -20)
target_position = Vector2(30, 0)
enabled = true
